@@ -1,3 +1,8 @@
+Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * don't die if we can't open a package in dpkg-scanpackages, just print
+    a warning and skip the package.
+
 Mon Oct 11 18:18:25 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Move dselect into its own package
